--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,26 +8,36 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     colors: {
-                        primary: '#0056D2',
-                        accent: '#1E88E5',
-                        'text-main': '#222222',
-                        'bg-main': '#FFFFFF',
-                        'bg-section': '#F5F7FA',
+                        'primary': '#00A9FF',
+                        'accent': '#00E0C7',
+                        'bg-main': '#0a0a0a',
+                        'bg-secondary': '#1a1a1a',
+                        'text-main': '#e0e0e0',
+                        'text-secondary': '#a0a0a0',
                     },
                     fontFamily: {
-                        sans: ['Open Sans', 'sans-serif'],
+                        sans: ['Inter', 'sans-serif'],
                         poppins: ['Poppins', 'sans-serif'],
                     },
                     boxShadow: {
-                        'soft': '0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05)',
-                        'glow-primary': '0 0 15px rgba(0, 86, 210, 0.5)',
-                    }
+                        'soft': '0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1)',
+                        'glow-primary': '0 0 20px rgba(0, 169, 255, 0.3)',
+                    },
+                    animation: {
+                        'gradient-bg': 'gradient-bg 15s ease infinite',
+                    },
+                    keyframes: {
+                        'gradient-bg': {
+                            '0%, 100%': { backgroundPosition: '0% 50%' },
+                            '50%': { backgroundPosition: '100% 50%' },
+                        },
+                    },
                 }
             }
         }
