--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                         },
                         'dark': {
                             'bg-main': '#000000',
-                            'bg-secondary': '#1D1D1F',
+                            'bg-secondary': '#161617',
                             'text-main': '#F5F5F7',
-                            'text-secondary': '#A1A1A6',
-                            'border': '#424245',
+                            'text-secondary': '#86868B',
+                            'border': '#3A3A3C',
                         }
                     },
                     fontFamily: {
@@ -37,17 +37,21 @@
                     },
                     boxShadow: {
                         'soft': '0 4px 12px rgba(0, 0, 0, 0.05)',
-                        'soft-dark': '0 4px 12px rgba(0, 0, 0, 0.1)',
+                        'soft-dark': '0 4px 12px rgba(0, 0, 0, 0.15)',
                     },
                     keyframes: {
-                        float: {
-                            '0%': { transform: 'translateY(0px)', opacity: '0.6' },
-                            '50%': { transform: 'translateY(-20px)', opacity: '1' },
-                            '100%': { transform: 'translateY(0px)', opacity: '0.6' },
+                        'grid-pan': {
+                            '0%': { backgroundPosition: '0% 0%' },
+                            '100%': { backgroundPosition: '100% 100%' },
                         },
+                        'growth': {
+                            '0%, 100%': { transform: 'scale(1)', opacity: '0.1' },
+                            '50%': { transform: 'scale(1.2)', opacity: '0.15' },
+                        }
                     },
                     animation: {
-                        float: 'float 6s ease-in-out infinite',
+                        'grid-pan': 'grid-pan 30s linear infinite',
+                        'growth': 'growth 15s ease-in-out infinite',
                     },
                 }
             }
