--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 44 44'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23FBBF24'/%3E%3Cstop offset='100%25' stop-color='%23F59E0B'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23D1D5DB'/%3E%3Cstop offset='50%25' stop-color='%239CA3AF'/%3E%3Cstop offset='100%25' stop-color='%236B7280'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='22' cy='22' r='22' fill='url(%23a)'/%3E%3Cpath d='M19 16L27 22 19 28l2 0L29 22 21 16z' fill='url(%23b)'/%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 44 44'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23FBBF24'/%3E%3Cstop offset='100%25' stop-color='%23F59E0B'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23D1D5DB'/%3E%3Cstop offset='50%25' stop-color='%239CA3AF'/%3E%3Cstop offset='100%25' stop-color='%236B7280'/%3E%3C/defs%3E%3Ccircle cx='22' cy='22' r='22' fill='url(%23a)'/%3E%3Cpath d='M19 16L27 22 19 28l2 0L29 22 21 16z' fill='url(%23b)'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huntifyy - Your AI & Startup Launchpad</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -47,11 +47,15 @@
                         'growth': {
                             '0%, 100%': { transform: 'scale(1)', opacity: '0.1' },
                             '50%': { transform: 'scale(1.2)', opacity: '0.15' },
+                        },
+                        'intro-fade-out': {
+                            'to': { opacity: '0', transform: 'translateY(-20px)' }
                         }
                     },
                     animation: {
                         'grid-pan': 'grid-pan 30s linear infinite',
                         'growth': 'growth 15s ease-in-out infinite',
+                        'intro-fade-out': 'intro-fade-out 0.5s cubic-bezier(0.76, 0, 0.24, 1) forwards',
                     },
                 }
             }
