--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 44 44'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23FBBF24'/%3E%3Cstop offset='100%25' stop-color='%23F59E0B'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23D1D5DB'/%3E%3Cstop offset='50%25' stop-color='%239CA3AF'/%3E%3Cstop offset='100%25' stop-color='%236B7280'/%3E%3C/defs%3E%3Ccircle cx='22' cy='22' r='22' fill='url(%23a)'/%3E%3Cpath d='M19 16L27 22 19 28l2 0L29 22 21 16z' fill='url(%23b)'/%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 44 44'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='.5' y1='0' x2='.5' y2='1'%3E%3Cstop offset='0%25' stop-color='%23FCE588'/%3E%3Cstop offset='100%25' stop-color='%23D4AF37'/%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='22' cy='22' r='22' fill='url(%23a)'/%3E%3Cpath d='M19 16L27 22 19 28l2 0L29 22 21 16z' fill='%230A2540'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Huntifyy - Your AI & Startup Launchpad</title>
+    <title>Huntifyy - Empowering Student Innovation</title>
     <script src="https://cdn.tailwindcss.com" dangerously-disable-csp></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,20 +16,21 @@
             theme: {
                 extend: {
                     colors: {
-                        'primary': '#007AFF', // Apple Blue
+                        'primary': '#0A2540', // Deep Blue
+                        'accent': '#D4AF37', // Gold
                         'light': {
                             'bg-main': '#FFFFFF',
-                            'bg-secondary': '#F5F5F7',
-                            'text-main': '#1D1D1F', // Near Black
-                            'text-secondary': '#6E6E73',
-                            'border': '#D2D2D7',
+                            'bg-secondary': '#F7F9FC',
+                            'text-main': '#0A2540',
+                            'text-secondary': '#525F7F',
+                            'border': '#E2E8F0',
                         },
                         'dark': {
-                            'bg-main': '#000000',
-                            'bg-secondary': '#161617',
-                            'text-main': '#F5F5F7',
-                            'text-secondary': '#86868B',
-                            'border': '#3A3A3C',
+                            'bg-main': '#0A2540',
+                            'bg-secondary': '#113254',
+                            'text-main': '#F7F9FC',
+                            'text-secondary': '#A0AEC0',
+                            'border': '#2D3748',
                         }
                     },
                     fontFamily: {
